# PCx

./: .gitignore  AUTHORS  CITATION  COPYRIGHT  ChangeLog  Makefile  Makefile.in  PCx.specs  README  README-bench.md  README-kennington.md  README-mps.md  README.bench  README.build  README.fctp  README.md  README.mex  README.mps  README.notebook  README.old  README.rail  analysis.awk  analysis.sh  bench-fctplib-mmd.out  bench-kenlib-mmd.out  bench-kenlib-rcm.out  bench-meslib-mmd.out  bench-meslib-rcm.out  bench-netlib-mmd.out  bench-netlib-rcm.out  bench-pdslib-mmd.out  bench-pdslib-rcm.out  bench.out  bench.py  bench.sh  build  build.sh  configure  configure.ac  filter.sh  (+5 more)
DOC/: Makefile  algorithm.rst  authors.rst  benchmark.rst  conf.py  data-structures.rst  data-structures2.rst  debugging.rst  formulation.rst  index.rst  install.rst  invoking.rst  license.rst  linear_algebra.rst  make.bat  presolver.rst  reference.rst  samples.rst  specifications_file.rst
DOC/_static/: PCx.specs  afiro.mps  afiro.out
DOC/c_api/: Ng-Peyton.rst  PCx.rst  algorithm.rst  basics.rst  cblas.rst  dcolumns.rst  hash.rst  io.rst  jair.rst  lpmps.rst  main.rst  memory.rst  parameters.rst  pre.rst  presolve.rst  rcm.rst  readmps.rst  scale.rst  solve.rst  solver.rst  split.rst  timers.rst  wrappers.rst  writemps.rst  wssmp.rst
DOC/gdb/: afiro_ordmmd_after.txt  afiro_ordmmd_before.txt  afiro_sfinit_after.txt  afiro_sfinit_before.txt  maros0_ordmmd_after.txt  maros0_ordmmd_before.txt  maros0_sfinit_after.txt  maros0_sfinit_before.txt  ordmmd.gdb  ordmmd_before.txt  run.sh  sfinit.gdb  specs
DOC/ref/: PCx-user.dvi  PCx-user.ps
F2C/: Makefile.in  makefile  makefile.linux  makefile.sunsol
MAKEARCH/: .make  IRIX.make  hpux.make  linux.make  rs6000.make  solaris.make  sun4.make  t3d.make
Ng-Peyton/: Makefile  Makefile.in  README  assmb.c  assmb.f  betree.c  bfinit.c  bfinit.f  blkfc2.c  blkfc2.f  blkfct.c  blkfct.f  blkslb.c  blkslb.f  blkslf.c  blkslf.f  blkslv.c  blkslv.f  btree2.c  btree2.f  chlsup.c  chlsup.f  chordr.c  chordr.f  create.c  create.f  dscal1.c  dscal1.f  epost2.c  epost2.f  etordr.c  etordr.f  etpost.c  etpost.f  etree.c  etree.f  fcnthn.c  fcnthn.f  fnsplt.c  fnsplt.f  (+62 more)
SRC/: Doxyfile  Makefile  Makefile.in  Ng-Peyton.c  Ng-Peyton.h  PCx.c  PCx2.c  RitzVa.f  algorithm.c  basics.c  blas.f  blkLVL.c  blkLVL.f  cblas.c  cblasex.c  cccg.f  ccf.f  dcolumns.c  def.h  driver.c  dscale.f  eigen.c  extra_defs.h  hash.c  hash.h  io.c  jair-von.c  jair.c  jairvon.c  lp.c  lpmps.c  lu.c  main.c  main.h  matrix.c  memory.c  memory.h  minres.c  nullmain.f  order.c  (+28 more)
debian/: PCx.1  README.Debian  README.examples  changelog  changelog-upstream.html  control  copyright  mps-pcx.5  pcx.doc-base  postinst  prerm  rules  rules-orig
mex/: 25fv47.mat  Makefile  PCx.m  PCx_mex.c  PCx_mex.h  afiro.mat  matPCx_interface.c  simple.m
mps/: fctp-bal8x12.mps.bz2  fctp-bk4x3.mps.bz2  fctp-gr4x6.mps.bz2  fctp-n3700.mps.bz2  fctp-n3701.mps.bz2  fctp-n3702.mps.bz2  fctp-n3703.mps.bz2  fctp-n3704.mps.bz2  fctp-n3705.mps.bz2  fctp-n3706.mps.bz2  fctp-n3707.mps.bz2  fctp-n3708.mps.bz2  fctp-n3709.mps.bz2  fctp-n370a.mps.bz2  fctp-n370b.mps.bz2  fctp-n370c.mps.bz2  fctp-n370e.mps.bz2  fctp-ran10x10a.mps.bz2  fctp-ran10x10b.mps.bz2  fctp-ran10x10c.mps.bz2  fctp-ran10x12.mps.bz2  fctp-ran10x26.mps.bz2  fctp-ran12x12.mps.bz2  fctp-ran12x21.mps.bz2  fctp-ran13x13.mps.bz2  fctp-ran14x18.mps.bz2  fctp-ran16x16.mps.bz2  fctp-ran17x17.mps.bz2  fctp-ran4x64.mps.bz2  fctp-ran6x43.mps.bz2  fctp-ran8x32.mps.bz2  kennington-cre-a.mps.bz2  kennington-cre-b.mps.bz2  kennington-cre-c.mps.bz2  kennington-cre-d.mps.bz2  kennington-ken-07.mps.bz2  kennington-ken-11.mps.bz2  kennington-ken-13.mps.bz2  kennington-ken-18.mps.bz2  kennington-osa-07.mps.bz2  (+227 more)
notebook/rcm/: bench-kenlib-rcm.out  bench-meslib-mmd.out  bench-meslib-rcm.out  bench-netlib-mmd.out  bench-netlib-rcm.out  bench-netlib.out  bench-netlibqap-mmd.out  bench-netlibqap-rcm.out  bench-raillib-mmd.out  bench-raillib-rcm.out  bench.hw
test/: check_rcm.c
